# crew-ai

./: .env.example  .gitignore  README.md  pyproject.toml
src/company_ai/: main.py
src/company_ai/crews/compliance_crew/: compliance_crew.py
src/company_ai/crews/compliance_crew/config/: agents.yaml  tasks.yaml
src/company_ai/crews/finance_crew/: __init__.py  finance_crew.py
src/company_ai/crews/finance_crew/config/: agents.yaml  tasks.yaml
src/company_ai/crews/marketing_crew/: __init__.py  marketing_crew.py
src/company_ai/crews/marketing_crew/config/: agents.yaml  tasks.yaml
src/company_ai/crews/tech_crew/: __init__.py  tech_crew.py
src/company_ai/crews/tech_crew/config/: agents.yaml  tasks.yaml
src/company_ai/tools/: __init__.py  ci_tools.py  docs_tools.py  finance_tools.py  internet_tools.py  legal_tools.py  marketing_tools.py  repo_tools.py
